# twodo

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  shell.nix  test.db
migrations/: 20250614141802_create_tasks.sql  20250701173840_create_projects.sql
src/: app.rs  cli.rs  constants.rs  error.rs  lib.rs  main.rs  run.rs
src/app/: mod.rs  model.rs  run.rs  view.rs
src/app/update/: event_handler.rs  message.rs  message_handler.rs  mod.rs  read_data.rs  support.rs
src/app/view/: mod.rs  support.rs
src/app/view/render/: app.rs  mod.rs  popup.rs  project.rs  task.rs
src/app/view/widgets/: add_project.rs  add_task.rs  mod.rs
src/cli/: cmd.rs  mod.rs  project.rs  task.rs
src/controller/: init.rs  mod.rs
src/controller/delegater/: delegate.rs  item.rs  mod.rs  project.rs  task.rs
src/objects/: mod.rs  project.rs  task.rs
tests/: test_app.rs  test_project.rs  test_task.rs
tests/common/: mod.rs
