[package]
name = "twodo"
authors = ["Jobin Nelson"]
description = "This a simple todo list application in terminal"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jobin-Nelson/twodo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
