[package]
name = "twodo"
authors = ["Jobin Nelson"]
description = "This a simple todo list application in terminal"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jobin-Nelson/twodo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
ratatui = "0.29.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
